--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-Wx0wsfVcdFXofYDR"
+    ></script>
   </body>
 </html>
